--- a/src/extra_model_paths.yaml
+++ b/src/extra_model_paths.yaml
@@ -1,5 +1,23 @@
-runpod_worker_comfy:
-  base_path: /runpod-volume
+# Network volume models - RunPod mounts at /runpod-volume OR /workspace
+# We check both paths for compatibility
+runpod_network_volume:
+  base_path: /runpod-volume/ComfyUI
+  checkpoints: models/checkpoints/
+  clip: models/clip/
+  clip_vision: models/clip_vision/
+  configs: models/configs/
+  controlnet: models/controlnet/
+  embeddings: models/embeddings/
+  loras: models/loras/
+  upscale_models: models/upscale_models/
+  vae: models/vae/
+  unet: models/unet/
+  diffusion_models: models/diffusion_models/
+  text_encoders: models/text_encoders/
+
+# Alternative path for pods that mount at /workspace
+workspace_volume:
+  base_path: /workspace/ComfyUI
   checkpoints: models/checkpoints/
   clip: models/clip/
   clip_vision: models/clip_vision/
